--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "avoutic/web-framework": "^8"
+        "avoutic/web-framework": "^8.0 || ^9.0 || ^10.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0"
